chore: CICD improvements (#518)
* chore: DevOps automation for PRs

Signed-off-by: Chris Butler <chris@thebutlers.me>

* chore: DevOps automation for PRs

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Added cache to github actions to accelerate workflow.

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Added cache to github actions to accelerate workflow.

Signed-off-by: Chris Butler <chris@thebutlers.me>

* chore: change versions

Signed-off-by: Chris Butler <chris@thebutlers.me>

* chore: change versions

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Clean up build process

Signed-off-by: Chris Butler <chris@thebutlers.me>

* fix: Conventional PR

Signed-off-by: Chris Butler <chris@thebutlers.me>

* fix: Conventional PR

Signed-off-by: Chris Butler <chris@thebutlers.me>

* fix: Conventional PR

Signed-off-by: Chris Butler <chris@thebutlers.me>

* fix: Change automerge tooling

Signed-off-by: Chris Butler <chris@thebutlers.me>

* fix: Change automerge tooling

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Experiment with pr helper

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Experiment with pr helper

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Experiment with pr helper

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Experiment with pr helper

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Experiment with pr helper

Signed-off-by: Chris Butler <chris@thebutlers.me>

* Experiment with pr helper

Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -6,7 +6,6 @@ on:
   push:
     branches:
       - main
-      - develop
   schedule:
     # Run once per day to ensure we have no build failures due to dependency updates.
     # * is a special character in YAML so you have to quote this string
@@ -18,6 +17,13 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+        - os: ubuntu-latest
+          path: ~/.cache/pip
+        - os: macos-latest
+          path: ~/Library/Caches/pip
+        - os: windows-latest
+          path: ~\AppData\Local\pip\Cache
         python-version: [3.7, 3.8, 3.9]
 
     steps:
@@ -28,6 +34,13 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - uses: actions/cache@v2
+      with:
+        path: ${{ matrix.path }}
+        key: ${{ matrix.os }}-${{ matrix.python-version }}-pip-${{ hashFiles('setup.cfg') }}
+        restore-keys: |
+         ${{ matrix.os }}-${{ matrix.python-version }}-pip-
+
     - name: Install build tools
       run: |
         make develop
