--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -3,14 +3,26 @@
 name: Trestle PR Pipeline
 
 
-on: [pull_request]
-
+on:
+  pull_request:
+  pull_request_review:
+  issue_comment:
+    branches:
+      - develop
+      - main
 jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+        - os: ubuntu-latest
+          path: ~/.cache/pip
+        - os: macos-latest
+          path: ~/Library/Caches/pip
+        - os: windows-latest
+          path: ~\AppData\Local\pip\Cache
         python-version: [3.7, 3.8, 3.9]
 
     steps:
@@ -21,6 +33,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - uses: actions/cache@v2
+      with:
+        path: ${{ matrix.path }}
+        key: ${{ matrix.os }}-${{ matrix.python-version }}-pip-${{ hashFiles('setup.cfg') }}
+        restore-keys: |
+         ${{ matrix.os }}-${{ matrix.python-version }}-pip-
     - name: Install build tools
       run: |
         make develop
@@ -51,3 +69,29 @@ jobs:
       with: 
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
+  prhelper_job:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    steps:
+    - name: Run PR Helper on Schedule
+      id: runprhelper
+      uses: Matticusau/pr-helper@v1.2.6
+      with:
+        repo-token: ${{ secrets.GITHUB_TOKEN }}
+        enable-prmerge-automation: true
+        enable-prcomment-automation: true
+        enable-prlabel-automation: true
+        enable-prreviewer-frontmatter: false
+        enable-welcomemessage: true
+        welcome-message: "Thanks for opening an issue! Make sure you've followed CONTRIBUTING.md."
+        prmerge-requireallchecks: true
+        prmerge-requirereviewcount: 1
+        prmerge-method: 'squash'
+        prmerge-deletebranch: 'true'
+        prmerge-deletebranch-config: '{"deny":["develop", "main", "gh-pages"]}'
+        prlabel-default: 'pr-onhold'
+        prlabel-ready: 'pr-ready'
+        prlabel-onhold: 'pr-onhold'
+        prlabel-reviewrequired: 'review-required'
+        prlabel-automerge: 'auto-merge'
