--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -24,7 +24,10 @@ jobs:
           # Configure which scopes are allowed.
           scopes: |
             core
-            ui
+            models
+            transformers
+            docs
+            cicd
           # Configure that a scope must always be provided.
           requireScope: false
           # Configure additional validation for the subject based on a regex.
