--- a/.github/workflows/trestle-main-automerge.yml
+++ b/.github/workflows/trestle-main-automerge.yml
@@ -17,21 +17,21 @@ jobs:
     steps:
     - name: Run PR Helper on Schedule
       id: runprhelper_main
-      uses: Matticusau/pr-helper@v1.2.4
+      uses: Matticusau/pr-helper@v1.2.6
       with:
         repo-token: ${{ secrets.ADMIN_PAT }}
         enable-prmerge-automation: true
-        enable-prcomment-automation: false
+        enable-prcomment-automation: true
         enable-prlabel-automation: true
         enable-prreviewer-frontmatter: true
         enable-welcomemessage: true
-        welcome-message: "Thanks for opening an issue! Make sure you've followed CONTRIBUTING.md."
+        welcome-message: "Thanks for opening an issue! When you are ready for the pr to be reviewed / merged add the pr-ready label."
         prmerge-requireallchecks: true
         prmerge-requirereviewcount: 1
         prmerge-method: 'merge'
         prmerge-deletebranch: 'true'
         prmerge-deletebranch-config: '{"deny":["develop", "main", "gh-pages"]}'
-        prlabel-default: 'pr-onhold'
+        prlabel-default: 'pr-ready'
         prlabel-ready: 'pr-ready'
         prlabel-onhold: 'pr-onhold'
         prlabel-reviewrequired: 'review-required'
