chore: cleanup CICD pipelines to help remove duplication
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -2,6 +2,10 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 name: Trestle Deploy
 
+concurrency: 
+    group: ${{ github.repository }}
+    cancel-in-progress: true
+
 on:
   push:
     branches:
