--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -1,5 +1,9 @@
 name: "Lint PR"
 
+concurrency: 
+    group: ${{ github.head_ref }}
+    cancel-in-progress: true
+
 on:
   pull_request:
     types:
