--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -2,6 +2,9 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 name: Trestle PR Pipeline
 
+concurrency: 
+    group: ${{ github.head_ref }}
+    cancel-in-progress: true
 
 on:
   pull_request:
