chore: cleanup CICD pipelines to help remove duplication
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -3,7 +3,7 @@
 name: Trestle PR Pipeline
 
 concurrency: 
-    group: ${{ github.head_ref }}
+    group: ${{ github.head_ref }}-${{ github.workflow }}
     cancel-in-progress: true
 
 on:
