chore: cleanup CICD pipelines to help remove duplication
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/trestle-main-automerge.yml
+++ b/.github/workflows/trestle-main-automerge.yml
@@ -1,7 +1,7 @@
 name: PR Helper - main
 
 concurrency: 
-    group: ${{ github.head_ref }}
+    group: ${{ github.head_ref }}-${{ github.workflow }}
     cancel-in-progress: true
 
 on:
