--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -1,7 +1,7 @@
 name: "Lint PR"
 
 concurrency: 
-    group: ${{ github.head_ref }}
+    group: ${{ github.head_ref }}-${{ github.workflow }}
     cancel-in-progress: true
 
 
