--- a/.github/workflows/trestle-develop-automerge.yml
+++ b/.github/workflows/trestle-develop-automerge.yml
@@ -1,7 +1,7 @@
 name: PR Helper - develop
 
 concurrency: 
-    group: ${{ github.head_ref }}
+    group: ${{ github.head_ref }}-${{ github.workflow }}
     cancel-in-progress: true
 
 on:
