--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -2,10 +2,6 @@
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 name: Trestle Deploy
 
-concurrency: 
-    group: ${{ github.repository }}
-    cancel-in-progress: true
-
 on:
   push:
     branches:
@@ -17,6 +13,9 @@ on:
 
 jobs:
   build:
+    concurrency: 
+      group: ${{ github.ref }}-${{ github.workflow }}-${{ github.job }}
+      cancel-in-progress: true
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -103,6 +102,9 @@ jobs:
   deploy-docs:
     runs-on: ubuntu-latest
     needs: deploy
+    concurrency: 
+      group: ${{ github.ref }}-${{ github.workflow }}-${{ github.job }}
+      cancel-in-progress: true
     # Temporary hack: allow develop as well as master to deploy docs.
     if: github.ref == 'refs/heads/main'
     steps:
@@ -128,6 +130,9 @@ jobs:
     name: Merge main -> develop
     runs-on: ubuntu-latest
     needs: deploy
+    concurrency: 
+      group: ${{ github.ref }}-${{ github.workflow }}-${{ github.job }}
+      cancel-in-progress: true
     if: github.ref == 'refs/heads/main'
     steps:
     - uses: tukasz/direct-merge-action@master
