--- a/.github/workflows/trestle-develop-automerge.yml
+++ b/.github/workflows/trestle-develop-automerge.yml
@@ -14,6 +14,9 @@ on:
 
 jobs:
   prhelper_job:
+    concurrency: 
+      group: ${{ github.head_ref }}-${{ github.workflow }}
+      cancel-in-progress: true
     runs-on: ubuntu-latest
     steps:
     - name: Run PR Helper on Schedule
