fix: Remove aconcurrency restriction from matrix build jobs.
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -10,9 +10,9 @@ on:
       - main
 jobs:
   build:
-    concurrency: 
-      group: ${{ github.head_ref }}-${{ github.workflow }}
-      cancel-in-progress: true
+    # concurrency: 
+    #   group: ${{ github.head_ref }}-${{ github.workflow }}
+    #   cancel-in-progress: true
 
     runs-on: ${{ matrix.os }}
     strategy:
