fix: Update again
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/trestle-develop-automerge.yml
+++ b/.github/workflows/trestle-develop-automerge.yml
@@ -20,31 +20,23 @@ on:
 jobs:
   automerge:
     if: github.base_ref != 'refs/heads/main'
-    concurrency: 
-      group: ${{ github.head_ref }}-${{ github.workflow }}
-      cancel-in-progress: true
-
     runs-on: ubuntu-latest
     steps:
       - name: automerge
         uses: "pascalgn/automerge-action@v0.14.1"
         env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          GITHUB_TOKEN: "${{ secrets.ADMIN_PAT }}"
           MERGE_METHOD: squash
           MERGE_FORKS: false
           UPDATE_METHOD: merge
   automerge_main:
     if: github.base_ref == 'refs/heads/main'
-    concurrency: 
-      group: ${{ github.head_ref }}-${{ github.workflow }}
-      cancel-in-progress: true
-
     runs-on: ubuntu-latest
     steps:
       - name: automerge
         uses: "pascalgn/automerge-action@v0.14.1"
         env:
-          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+          GITHUB_TOKEN: "${{ secrets.ADMIN_PAT }}"
           MERGE_METHOD: merge
           MERGE_FORKS: false
           UPDATE_METHOD: merge
