--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
   - compliance posture: tutorials/continuous-compliance/continuous-compliance.md
   - transformer construction: tutorials/task.transformer-construction/transformer-construction.md
   - task tanium-to-oscal: tutorials/task.tanuim-to-oscal/transformation.md
+  - third party result schema for SCC: tutorials/third-party-result-schema-SCC.md
 - Code of Conduct: mkdocs_code_of_conduct.md
 - Contributing:
   - Overview: contributing/mkdocs_contributing.md
@@ -42,6 +43,7 @@ nav:
       - osco_to_oscal: api_reference/trestle.tasks.osco_to_oscal.md
       - tanium_to_oscal: api_reference/trestle.tasks.tanium_to_oscal.md
     - core:
+      - validator: api_reference/trestle.core.validator.md
       - validator_helper: api_reference/trestle.core.validator_helper.md
       - models:
         - interfaces: api_reference/trestle.core.models.interfaces.md
@@ -52,7 +54,9 @@ nav:
       - base_model: api_reference/trestle.core.base_model.md
       - duplicates_validator: api_reference/trestle.core.duplicates_validator.md
       - generators: api_reference/trestle.core.generators.md
+      - ncname_validator: api_reference/trestle.core.ncname_validator.md
       - parser: api_reference/trestle.core.parser.md
+      - all_validator: api_reference/trestle.core.all_validator.md
       - utils: api_reference/trestle.core.utils.md
       - commands:
         - md: api_reference/trestle.core.commands.md.md
@@ -77,6 +81,7 @@ nav:
       - object_factory: api_reference/trestle.core.object_factory.md
       - err: api_reference/trestle.core.err.md
       - const: api_reference/trestle.core.const.md
+      - refs_validator: api_reference/trestle.core.refs_validator.md
       - markdown_validator: api_reference/trestle.core.markdown_validator.md
       - validator_factory: api_reference/trestle.core.validator_factory.md
       - remote:
