--- a/tests/data/tasks/osco/input-compressed/ssg-ocp4-ds-cis-111.222.333.444-pod.yaml
+++ b/tests/data/tasks/osco/input-compressed/ssg-ocp4-ds-cis-111.222.333.444-pod.yaml
@@ -11,9 +11,9 @@ metadata:
     openscap-scan-result/node: 111.222.333.444
   creationTimestamp: "2020-08-03T02:26:34Z"
   labels:
-    compliance-scan: ssg-ocp4-ds-cis
-  name: ssg-ocp4-ds-cis-111.222.333.444-pod
+    compliance-scan: ssg-rhel7-ds-cis
+  name: ssg-rhel7-ds-cis-111.222.333.444-pod
   namespace: openshift-compliance
   resourceVersion: "22693328"
-  selfLink: /api/v1/namespaces/openshift-compliance/configmaps/ssg-ocp4-ds-cis-111.222.333.444-pod
+  selfLink: /api/v1/namespaces/openshift-compliance/configmaps/ssg-rhel7-ds-cis-111.222.333.444-pod
   uid: 1da3ea81-0a25-4512-ad86-7ac360246b5d
