--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ install_requires =
     mistune==2.0.0rc1 # Review regularly.
     pywin32 >= 1.0;platform_system=='Windows'
     MarkupSafe<2.0
+    defusedxml
 [options.package_data]
 trestle.resources = 
     *.ini
@@ -53,6 +54,7 @@ console_scripts =
 
 [options.extras_require]
 dev =
+	defusedxml
     MarkupSafe<2.0
     pytest>=5.4.3
     pytest-cov>=2.10.0
