--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -3,14 +3,28 @@
 name: Trestle PR Pipeline
 
 
-on: [pull_request]
-
+on:
+  pull_request:
+    branches:
+      - develop
+      - main
 jobs:
   build:
+    # concurrency: 
+    #   group: ${{ github.head_ref }}-${{ github.workflow }}
+    #   cancel-in-progress: true
+
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
+        include:
+        - os: ubuntu-latest
+          path: ~/.cache/pip
+        - os: macos-latest
+          path: ~/Library/Caches/pip
+        - os: windows-latest
+          path: ~\AppData\Local\pip\Cache
         python-version: [3.7, 3.8, 3.9]
 
     steps:
@@ -21,6 +35,12 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - uses: actions/cache@v2
+      with:
+        path: ${{ matrix.path }}
+        key: ${{ matrix.os }}-${{ matrix.python-version }}-pip-${{ hashFiles('setup.cfg') }}
+        restore-keys: |
+         ${{ matrix.os }}-${{ matrix.python-version }}-pip-
     - name: Install build tools
       run: |
         make develop
@@ -51,3 +71,4 @@ jobs:
       with: 
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
+ 
