fix: Cleanup CIDC workflow to prevent admin rights pushing over checks.
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/trestle-develop-automerge.yml
+++ b/.github/workflows/trestle-develop-automerge.yml
@@ -26,7 +26,7 @@ jobs:
       - name: automerge
         uses: "pascalgn/automerge-action@v0.14.2"
         env:
-          LOG: TRACE
+          LOG: "TRACE"
           GITHUB_TOKEN: "${{ secrets.WRITE_PAT }}"
           MERGE_METHOD: squash
           MERGE_FORKS: false
@@ -39,7 +39,7 @@ jobs:
       - name: automerge
         uses: "pascalgn/automerge-action@v0.14.2"
         env:
-          LOG: TRACE
+          LOG: "TRACE"
           GITHUB_TOKEN: "${{ secrets.WRITE_PAT }}"
           MERGE_METHOD: merge
           MERGE_FORKS: false
