--- a/.github/workflows/trestle-develop-automerge.yml
+++ b/.github/workflows/trestle-develop-automerge.yml
@@ -27,7 +27,7 @@ jobs:
         run: echo "$GITHUB_CONTEXT"
   automerge:
     # If it's not coming from develop - squash-merge.
-    if: github.base_ref == 'refs/heads/develop' || github.event.pull_request.base.ref == 'develop' || contains(github.event.pull_requests.*.base.ref, 'develop')
+    if: github.base_ref == 'refs/heads/develop' || github.event.pull_request.base.ref == 'develop' || contains(github.event.check_suite.pull_requests.*.base.ref, 'develop')
     #if: github.ref == 'refs/heads/develop'
     runs-on: ubuntu-latest
     steps:
@@ -41,7 +41,7 @@ jobs:
   automerge_main:
     # if it is coming from develop to a merge commit.
     # This makes some assumptions on indexing, however, should be safe.
-    if: github.base_ref == 'refs/heads/main' || github.event.pull_request.base.ref == 'main' || contains(github.event.pull_requests.*.base.ref,  'main')
+    if: github.base_ref == 'refs/heads/main' || github.event.pull_request.base.ref == 'main' || contains(github.event.check_suite.pull_requests.*.base.ref,  'main')
     #if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     steps:
