Added missing dependencies
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -73,7 +73,9 @@ dev =
     mkdocs-material
     markdown-include
     pymdown-extensions
+    livereload
     ## Constrain system 
+
    
     
 [semantic_release]
