fix Lint PR firing off dev
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   lint:
+    if: ${{ github.base_ref == 'develop' }}
     concurrency: 
       group: ${{ github.head_ref }}-${{ github.workflow }}
       cancel-in-progress: true
