--- a/.github/workflows/conventional-pr.yml
+++ b/.github/workflows/conventional-pr.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   lint:
-    if: ${{ github.base_ref == 'develop' }}
+    if: ${{ github.head_ref != 'develop' }}
     concurrency: 
       group: ${{ github.head_ref }}-${{ github.workflow }}
       cancel-in-progress: true
@@ -32,6 +32,8 @@ jobs:
             transformers
             docs
             cicd
+            author
+            cli
           # Configure that a scope must always be provided.
           requireScope: false
           # Configure additional validation for the subject based on a regex.
