chore: cModerniing to ruamel.yaml
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ install_requires =
     attrs~=19.3
     ilcli
     paramiko
-    pyyaml
+    ruamel.yaml
     furl
     pydantic[email]>=1.8.2
     python-dotenv>=0.10.4
