fix: Replace yaml library with modernized and safe yaml library
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/tests/data/yaml/bad_target_dup_uuid.yaml
+++ b/tests/data/yaml/bad_target_dup_uuid.yaml
@@ -31,7 +31,7 @@ target-definition:
             value: xccdf_org.ssgproject.content_rule_api_server_insecure_bind_address
           - name: XCCDF_rule
             value: xccdf_org.ssgproject.content_rule_api_server_authorization_mode
-          uuid: 09dc3f43-8f52-46a3-9445-f7f2906cb946
+          uuid: 09dc3f43-8f52-46a3-9445-f7f2906ab946
         - control-id: IA-5
           description: IA-5
           props:
@@ -39,7 +39,7 @@ target-definition:
             value: xccdf_org.ssgproject.content_rule_api_server_basic_auth
           - name: XCCDF_rule
             value: xccdf_org.ssgproject.content_rule_api_server_token_auth
-          uuid: 00f2f9fb-2256-4fed-9c0a-02f63fb332e6
+          uuid: 09dc3f43-8f52-46a3-9445-f7f2906ab946
         links:
         - href: https://quay.io/repository/complianceascode/ocp4
           media-type: scap_org.open-scap_collection_from_xccdf_ssg-ocp4-xccdf-1.2.xml
@@ -65,10 +65,10 @@ target-definition:
           ns: https://sample.com/TCE
           value: cis
         source: https://github.com/usnistgov/OSCAL/blob/v1.0.0-milestone3/content/nist.gov/SP800-53/rev4/json/NIST_SP-800-53_rev4_catalog.json
-        uuid: daca7f77-a2eb-433c-aec2-999c185671dd
+        uuid: daca7f71-a2eb-433c-aec2-999c185671dd
       title: Red Hat OpenShift Kubernetes
       type: Software
-
+    56666738-0f9a-4e38-9aac-c0fad00a1822:
       description: RedHat Enterprise Linux 7.8
       target-control-implementations:
       - description: Compliance Operator SCAP guide for RedHat OpenShift Kubernetes
@@ -1898,13 +1898,13 @@ target-definition:
           props:
           - name: XCCDF_rule
             value: xccdf_org.ssgproject.content_rule_sshd_disable_root_login
-          uuid: 56676738-0f9a-4e38-9aac-c0fad00a5821
+          uuid: 0ca5b47e-383b-4c8e-8409-5e1ee94647a1
         - control-id: IA-2(5)
           description: IA-2(5)
           props:
           - name: XCCDF_rule
             value: xccdf_org.ssgproject.content_rule_sshd_disable_root_login
-          uuid: 56676738-0f9a-4e38-9aac-c0fad00a5821
+          uuid: 1616c508-926b-483d-a290-f8fb84bcd824
         links:
         - href: https://quay.io/repository/complianceascode/ocp4
           media-type: scap_org.open-scap_collection_from_xccdf_ssg-ocp4-xccdf-1.2.xml
@@ -1933,4 +1933,4 @@ target-definition:
         uuid: daca7f77-a2eb-433c-aec2-999c185671dd
       title: RedHat Enterprise Linux 7.8
       type: Software
-  uuid: 56676738-0f9a-4e38-9aac-c0fad00a5821
+  uuid: 56676738-0f9a-4e38-9aac-c0fad00a2823
