--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
       - id: yapf
         args: [--in-place, --parallel, --recursive, --style, .yapf-config]
         files: "^(trestle|tests|scripts)"
-        exclude: "(oscal|third_party)"
+        exclude: "(third_party)"
         stages: [commit]
   - repo: https://gitlab.com/pycqa/flake8
     rev: 3.8.4
