fix: Scope git config to only the CICD user.
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -30,7 +30,7 @@ jobs:
     steps:
     - name: Don't mess with  line endings
       run: |
-        git config --system core.autocrlf false
+        git config core.autocrlf false
     - uses: actions/checkout@v2
       with:
         submodules: true
