--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
     - name: Don't mess with  line endings
       run: |
-        git config core.autocrlf false
+        git config --global core.autocrlf false
     - uses: actions/checkout@v2
       with:
         submodules: true
