fix: Ensure line endings do not change (#593)
* fix: Ensure line endings do not change

Signed-off-by: Chris Butler <chris@thebutlers.me>

* fix: Scope git config to only the CICD user.

Signed-off-by: Chris Butler <chris@thebutlers.me>

* fix: Correct config scope.

Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -27,6 +27,9 @@ jobs:
         python-version: [3.7, 3.8, 3.9]
 
     steps:
+    - name: Don't mess with  line endings
+      run: |
+        git config --global core.autocrlf false
     - uses: actions/checkout@v2
       with:
         submodules: true
