--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ author_email = chris.butler@au1.ibm.com
 license = Apache Software License v2
 url = https://github.com/IBM/compliance-trestle
 classifiers =
-    Development Status :: 3 - Alpha
+    Development Status :: 4 - Beta
     Environment :: Console
     Intended Audience :: Developers
     Intended Audience :: Information Technology
