--- a/tests/data/yaml/good_simple.yaml
+++ b/tests/data/yaml/good_simple.yaml
@@ -1,3 +1,6 @@
-Star:
-  name: Sirius
-  mag: -1.41
+control-origination:
+- Service Provider Corporate
+- Service Provider System Specific
+responsible-roles:
+- Customer
+
