spread sheet to OSCAL component definition task

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,8 @@ install_requires =
     pywin32 >= 1.0;platform_system=='Windows'
     MarkupSafe<2.0
     defusedxml
+    openpyxl~=3.0
+    
 [options.package_data]
 trestle.resources = 
     *.ini
