--- a/tests/data/tasks/xlsx/test-xlsx-to-component-definition.config
+++ b/tests/data/tasks/xlsx/test-xlsx-to-component-definition.config
@@ -5,3 +5,8 @@ spread-sheet-file = tests/data/spread-sheet/good.xlsx
 work-sheet-name = example_best_practices_controls
 output-dir = tests/data/tasks/xlsx/output
 output-overwrite = true
+
+org-name = International Business Machines
+org-remarks = IBM
+namespace = http://ibm.github.io/compliance-trestle/schemas/oscal/cd/ibm-cloud
+property-name-to-class = goal_name_id:scc_goal_name_id, goal_version:scc_goal_version
