--- a/tests/data/tasks/xlsx/test-xlsx-to-component-definition.config
+++ b/tests/data/tasks/xlsx/test-xlsx-to-component-definition.config
@@ -10,3 +10,5 @@ org-name = International Business Machines
 org-remarks = IBM
 namespace = http://ibm.github.io/compliance-trestle/schemas/oscal/cd/ibm-cloud
 property-name-to-class = goal_name_id:scc_goal_name_id, goal_version:scc_goal_version
+catalog-url = https://github.com/usnistgov/oscal-content/blob/master/nist.gov/SP800-53/rev4/json/NIST_SP-800-53_rev4_catalog.json
+catalog-title = NIST Special Publication 800-53 Revision 4
