--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,17 +1,16 @@
 repos:
   - repo: https://github.com/pre-commit/mirrors-yapf
-    rev: v0.30.0
+    rev: v0.31.0
     hooks:
       - id: yapf
         args: [--in-place, --parallel, --recursive, --style, .yapf-config]
         files: "^(trestle|tests|scripts)"
-        exclude: "(third_party)"
         stages: [commit]
   - repo: https://gitlab.com/pycqa/flake8
-    rev: 3.8.4
+    rev: 3.9.2
     hooks:
       - id: flake8
-        args: [--extend-ignore, "P1,C812,C813,C814,C815,C816,W503,W605"]
+        args: [--extend-ignore, "P1,C812,C813,C814,C815,C816,W503,W605", "--illegal-import-packages=filecmp"]
         additional_dependencies:
           [
             flake8-2020,
@@ -29,13 +28,41 @@ repos:
             flake8-quotes,
             flake8-string-format,
             flake8-use-fstring,
+            flake8-illegal-import,
             pep8-naming,
           ]
-        files: "^(trestle|tests|scripts)"
+        files: "^(tests|scripts)"
         exclude: "(oscal|third_party)"
         stages: [commit]
+      - id: flake8
+        args: [--extend-ignore, "P1,C812,C813,C814,C815,C816,W503,W605", "--illegal-import-packages=filecmp"]
+        additional_dependencies:
+          [
+            flake8-2020,
+            flake8-broken-line,
+            flake8-bugbear,
+            flake8-builtins,
+            flake8-commas,
+            flake8-comprehensions,
+            flake8-docstrings,
+            flake8-eradicate,
+            flake8-import-order,
+            flake8-mutable,
+            flake8-pep3101,
+            flake8-print,
+            flake8-quotes,
+            flake8-string-format,
+            flake8-use-fstring,
+            flake8-illegal-import,
+            pep8-naming,
+            flake8-bandit,
+            dlint  
+          ]
+        files: "^(trestle)"
+        exclude: "(oscal)"
+        stages: [commit]
   - repo: https://github.com/executablebooks/mdformat
-    rev: 0.7.1 # Do not change version. 0.6.0 introduces breaking changes.
+    rev: 0.7.7
     hooks:
     - id: mdformat
       exclude: "CHANGELOG.md|docs/mkdocs_code_of_conduct.md|docs/api_reference|tests/data/author"
