Remove the copy of the nist 800-53 catalog.
Signed-off-by: Lou DeGenaro <lou.degenaro@gmail.com>

--- a/tests/data/tasks/xlsx/test-xlsx-to-component-definition.config
+++ b/tests/data/tasks/xlsx/test-xlsx-to-component-definition.config
@@ -1,6 +1,6 @@
 [task.xlsx-to-oscal-component-definition]
 
-catalog-file = tests/data/catalogs/nist-800-53-rev4/catalog.json
+catalog-file = nist-content/nist.gov/SP800-53/rev4/json/NIST_SP-800-53_rev4_catalog.json
 spread-sheet-file = tests/data/spread-sheet/good.xlsx
 work-sheet-name = example_best_practices_controls
 output-dir = tests/data/tasks/xlsx/output
