--- a/setup.cfg
+++ b/setup.cfg
@@ -60,6 +60,7 @@ dev =
     MarkupSafe<2.0
     pytest>=5.4.3
     pytest-cov>=2.10.0
+    pytest-xdist
     pre-commit>=2.4.0
     setuptools
     wheel
