fix: Further scleaning of CICD to optimise performance
Signed-off-by: Chris Butler <chris@thebutlers.me>

--- a/.github/workflows/python-push.yml
+++ b/.github/workflows/python-push.yml
@@ -48,28 +48,39 @@ jobs:
       run: |
         make develop
     - name: Setup pre-commit
+      if: ${{ !(matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7') }}
       run: |
         make pre-commit
     - name: Install dependencies
       run: |
         make install
     - name: Run code formatting (yapf)
+      if: ${{ !(matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7') }}
       run: |
         make code-format
     - name: Run code linting (flake8)
+      if: ${{ !(matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7') }}
       run: |
         make code-lint
     - name: Run code typing check (mypy)
+      if: ${{ !(matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7') }}
       continue-on-error: true 
       run: |
         make code-typing
     - name: Validate website content (mkdocs)
+      if: ${{ !(matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7') }}
       run: |
         make docs-validate
-    - name: Pytest
+    - name: Pytest Fast
+      if: ${{ !(matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7') }}
       run: |
         make test
+    - name: Pytest Cov
+      if: ${{ matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7' }}
+      run: |
+        make test-cov
     - name: Push code-cov
+      if: ${{ !(matrix.os == 'ubuntu-latest' && matrix.python-version == '3.7') }}
       uses: codecov/codecov-action@v1
       with: 
         token: ${{ secrets.CODECOV_TOKEN }}
